updates to leadership section

--- a/resume.tex
+++ b/resume.tex
@@ -173,7 +173,8 @@
 \section{Leadership}
 \resumeItemListStart
   \resumeSubheading
-    {Alpha Sigma Phi – Alpha Tau Chapter}{}{President}{}
+    {President of Alpha Sigma Phi – Alpha Tau Chapter}{}{}{}
+    \vspace{-12pt}
   \resumeBulletStart
     \resumeBullet{
       Led a 40-member organization and directed a 10-officer executive board.
@@ -185,4 +186,3 @@
 \resumeItemListEnd
 
 \end{document}
-
